freest/test/prog/Valid/SessionTypes/WaitPat/WaitPat.fst
module WaitPat where

foo : Wait -> ()
foo Wait = ()