freest/test/prog/Invalid/Typing/TypeMismatch/TypeMismatch.fst
module TypeMismatch where
foo : Int -> Char
foo x = 1